LPD-55496 PermGen has been entirely removed and replaced by Metaspace from JDK8+